--- a/src/main/components/App.css
+++ b/src/main/components/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+
 }
 
 .App-logo {
@@ -12,6 +12,7 @@
   height: 150px;
   padding: 20px;
   color: white;
+  text-align: center;
 }
 
 .App-body {
@@ -24,6 +25,10 @@
 
 .App-intro {
   font-size: large;
+}
+
+.App-message {
+  text-align: center;
 }
 
 @keyframes App-logo-spin {
