--- a/src/Text.css
+++ b/src/Text.css
@@ -8,3 +8,14 @@
   text-transform: uppercase;
   letter-spacing: 1px;
 }
+
+.card-body dt {
+  font-size: 14px;
+}
+.card-body dd {
+  font-size: 14px;
+}
+
+.note {
+  padding: 20px;
+}
